<resources>
    <string name="app_name">assignment1</string>

    <string name="message">Please select image to start order</string>
    <string name="button">Display orders</string>
    <string name="cake">This is a picture of a cake</string>
    <string name="title_activity_displayorders">displayorders</string>
    <string name="product_top">Please select the following options</string>
    <string name="radioText1">10 inch</string>
    <string name="radioText2">8 inch</string>
    <string name="radioText3">cupcake</string>
    <string name="cart">Add to cart</string>
    <string name="donutsize">Select amount:</string>
    <string name="dountsize1">6</string>
    <string name="dountsize2">12</string>
    <string name="dountoption">plain</string>
    <string name="dountoption1">sugar</string>
    <string name="dountoption3">icing</string>
    <string name="dountoptionheader">Select type:</string>
    <string name="confirm">Confirm order</string>
    <string name="donutswitch">Fill with Cream</string>
    <string name="switch_on">YES</string>
    <string name="back">Back to Home Srceen</string>
    <string name="send_order">Send Order</string>

</resources>